--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "react-responsive-carousel": "^3.2.23",
     "react-spring": "^9.7.1",
     "react-transition-group": "^4.4.5",
+    "react-zdog": "^1.2.2",
     "sanity": "^3.0.6",
     "sanity-plugin-iframe-pane": "^2.1.1",
     "sanity-plugin-vercel-deploy": "^3.3.4",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "zdog": "^1.1.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.21.5",
